@@ -1,3 +1,8 @@
+Mon Jun 07 10:33:07 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* include/xapian/geospatial.h: Finish incomplete documentation
+	  comment.
+
 Sun Jun 06 15:40:07 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* geospatial/latlong_posting_source.cc: Change the name() method to
